--- a/LandingPage/css/styles.css
+++ b/LandingPage/css/styles.css
@@ -1,3 +1,79 @@
+:root{
+    --primary-color: #d16105;
+}
+
+*{
+    margin: 0;
+    padding: 0;
+}
+
 body{
-    background-color: red;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 17px;
+    line-height: 1.5;
+    color: var(--primary-color);
+}
+
+#showcase{
+    background-image: url(../img/sebastian-unrau-sp-p7uuT0tw-unsplash.jpg);
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.3em;
+}
+
+#showcase::after{
+    content: "";
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    background-color: rgba(0, 0, 0, 0.6);
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
+
+h1, p, a{
+    z-index: 2;
+}
+
+a{
+    background-color: var(--primary-color);
+    text-decoration: none;
+    padding: 3px;
+    color: white;
+    border-radius: 8px;
+}
+
+a:hover{
+    color: var(--primary-color);
+    background-color: white;
+}
+
+#section-a{
+    background-color: var(--primary-color);
+    color:#fff;
+    text-align: center;
+}
+
+.fonsOrange{
+    background-color: var(--primary-color);
+    color :#fff;
+}
+
+#section-b{
+    background-color: #f4f4f4;
+
+}
+
+#section-c{
+    display: flex;
+}
+
+div{
+    padding: 20px;
 }
