--- a/css/galeria.css
+++ b/css/galeria.css
@@ -1,11 +1,30 @@
-nav {
-    width: 300px;
-    height: 20vh;
-    background-color: pink;
+/*nav {    
+    width: 100%;
+    height: 10vh;
+    background-color: rgb(138, 138, 225);
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    padding: 10px;
+}*/
+nav {
+    width: 100%;
+    background-color: rgb(232, 170, 104);
+    padding: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+    padding: 10px;
+}
+
+a:hover {
+    background-color: rgb(96, 107, 232);
 }
 
 img{
@@ -14,9 +33,23 @@ img{
     object-fit: cover;
 }
 
+body{
+    background-color: rgb(96, 107, 232);
+
+}
 .galeria {
+    align-items: center;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 1rem;
-    height: 70vh;
+    gap: 10px;
+    height: 90vh;
+    width: 300px;
+    padding-left: 25%;
+    padding-right: 25%;
+    margin-top: 50px;
+    align-self: center;
+}
+
+img:hover {
+    transform: scale(1.1);
 }
